--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.3.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
